versions/v1.21.1/code/README.th.md
# QM Pattern Signal Bot

**[English](README.md) · [ภาษาไทย](#ภาษาไทย)**

บอทสแกนหารูปแบบกลับตัว **QM (Quasimodo)** บน Binance USDⓈ-M perpetual futures
ยืนยันด้วยโมเมนตัม RSI และคุณภาพแท่งเทียน แล้วส่งเข้า **LINE** พร้อมกราฟที่วาดเส้นให้ครบ

บอทบอกว่าจุดน่าสนใจอยู่ตรงไหน — **ไม่ได้ส่งคำสั่งซื้อขาย และไม่ใช่คำแนะนำการลงทุน**
คุณเป็นคนตัดสินใจเองว่าจะเข้าไม้ไหน

<a name="ภาษาไทย"></a>

---

## บอททำอะไร

ทุกชั่วโมง หลังแท่งเทียนปิด 1 นาที บอทจะ:

1. ดึงเหรียญ futures ที่วอลุ่มสูงสุด N อันดับจาก Binance (กรอง leveraged token,
   คู่ stablecoin และหุ้น/ทองแบบ tokenized ออกแล้ว)
2. หาโครงสร้าง QM ในแต่ละเหรียญ — Left Shoulder → Head (กวาด liquidity) →
   Break of Structure → ราคากลับมาเทสที่ระดับ QM
3. ตรวจว่าการเบรกเป็นของจริง (เนื้อเทียนปิดทะลุ ไม่ใช่แค่ไส้แทะ) และการเด้งกลับมา
   เทสนั้น**ไม่มีแรง** (ดู RSI บนขา BOS→RS)
4. ให้เกรด **A / B / C** แล้วส่งเข้า LINE พร้อมจุดเข้า จุดตัดขาดทุน เป้าหมาย 2 จุด
   อัตราส่วนเสี่ยงต่อผลตอบแทน ขนาดไม้ และรูปกราฟ

```
SELL  ·  QM                    ┌─ พาเนลราคา: LS / L1 / HEAD / BOS / RS
BTC/USDT   1h wide             │  พร้อมเส้น entry, stop, TP1, TP2
─────────────────────────      │
Entry (QML)      63,450.00     └─ พาเนล RSI: ค่าโมเมนตัม
Stop Loss        64,092.98
TP1              61,297.00
TP2              59,632.29
R:R              1 : 3.35
BOS              เนื้อปิดทะลุ ✓
เกรด A           สูง (RSI +23)
Size             0.1555 BTC
Time             07/07 20:00 ICT
```

มีสรุปภาพรวม Bitcoin รายวันแยกอีกฉบับ (ราคา, เทรนด์ 1D/4H, RSI, ความผันผวน,
แนวรับ-แนวต้านที่ใกล้ที่สุด) ส่งทุกเช้า 10:00 น. ตามเวลาไทย

## ทำไมต้อง QM

QM เป็นรูปแบบกลับตัวที่มี 2 เรื่องเกิดพร้อมกัน: **Head แทงขึ้นไปกวาด liquidity**
เหนือ Left Shoulder แล้วราคา**ทำลายโครงสร้าง** ด้วยการหลุด low เดิมลงมา
ถ้าไม่มีการทำลายโครงสร้างนี้ มันก็เป็นแค่ Head & Shoulders ธรรมดาที่ต้องรอเบรก
neckline ก่อน — การหลุดโครงสร้างคือสิ่งที่ทำให้เข้าไม้ที่ระดับ QM ได้เลย
โดยตั้ง stop ได้แคบกว่า

---

# หลักการทำงาน

ควรอ่านส่วนนี้ก่อนตัดสินใจว่าจะเอาไปใช้ไหม ทุกการออกแบบข้างล่างนี้มีข้อแลกเปลี่ยน
และบางข้ออาจไม่ใช่แบบที่คุณต้องการ

## ภาพรวม 1 รอบสแกน ตั้งแต่ต้นจนจบ

บอทตื่นที่ **นาทีที่ 1 ของทุกชั่วโมง** — หลังแท่ง 1H ปิดไป 1 นาที
ส่วนแท่ง 4H ปิดพร้อมแท่งชั่วโมงอยู่แล้ว รอบเดียวจึงครอบคลุมทั้งสอง timeframe

```
รายชื่อเหรียญ      top-N ตามวอลุ่ม 24 ชม. (cache ไว้ 24 ชม.)
   ↓
แท่งเทียน          500 แท่งที่ปิดแล้ว ทั้ง 1H และ 4H, API สาธารณะ ไม่ต้องใช้ key
   ↓
โครงสร้าง          ตรวจ QM: LS → L1 → HEAD → BOS → RS
   ↓
ด่าน 1  R:R        ตัดทิ้งถ้า TP1 ไม่คุ้ม 1.5 เท่าของระยะ stop
ด่าน 2  โมเมนตัม    ตัดทิ้งถ้าการเด้งกลับมาเทสยังมีแรงหนุน
ด่าน 3  แท่งเทียน   ตัดทิ้งถ้าการเบรกเป็นแค่ไส้เทียน
ด่าน 4  ความสด     ตัดทิ้งถ้ารูปแบบเกิดนานเกิน 1 แท่ง
   ↓
กันส่งซ้ำ          SQLite เก็บ id ที่อ้างอิงจากเวลาของแท่ง HEAD
   ↓
วาดกราฟ + อัปโหลด   PNG → R2 → HTTPS URL
   ↓
LINE               Flex bubble + รูป ส่งครั้งเดียว
```

## 1. เลือกเหรียญอย่างไร

เอา `universe.top_n` (ค่าเริ่มต้น 100) เหรียญ USDT perpetual ที่วอลุ่ม 24 ชม. สูงสุด
โดยบังคับใส่ BTC กับ ETH เสมอไม่ว่าอันดับจะอยู่ตรงไหน ส่วน leveraged token,
คู่ stablecoin กับ stablecoin และหุ้น/ทองแบบ tokenized จะถูกตัดออก เพราะพฤติกรรม
ราคาไม่เหมือนเหรียญ โครงสร้างที่เจอจึงมีความหมายคนละอย่าง รายชื่อนี้ cache ไว้
24 ชั่วโมง ไม่ได้ดึงใหม่ทุกรอบสแกน

**ข้อควรรู้:** รายชื่อคือเหรียญวอลุ่มสูง**ของวันนี้** เหรียญที่ตายไปแล้วจะไม่อยู่ในนั้น
ทั้งตอนใช้งานจริงและตอน backtest

## 2. ตรวจจับ QM อย่างไร

QM ประกอบด้วย 5 จุด และบอทบังคับว่าต้องเกิด**ตามลำดับนี้**:

| จุด | ความหมาย |
|---|---|
| **LS** | ไหล่ซ้าย — swing ที่ทิ้ง liquidity ค้างไว้เหนือ (ใต้) มัน |
| **L1** | จุดพักตัวหลัง LS — คือโครงสร้างที่ต้องถูกทำลายทีหลัง |
| **HEAD** | ทำ high สูงกว่า (low ต่ำกว่า) LS คือการกวาด liquidity นั้น |
| **BOS / L2** | ราคาปิดทะลุ L1 ลงไป = ทำลายโครงสร้าง |
| **RS** | ราคากลับมาที่ระดับ QM (= ราคาของ LS) — จุดนี้คือจุดเข้า |

หา swing ด้วย fractal pivot: แท่งจะเป็น pivot high เมื่อมันสูงที่สุดเทียบกับ
`pivot_left` แท่งก่อนหน้าและ `pivot_right` แท่งถัดไป แล้วยุบ pivot ชนิดเดียวกัน
ที่ติดกันทิ้ง เพื่อให้ LS / L1 / HEAD สลับ สูง-ต่ำ-สูง เสมอ ประกอบรูปแบบผิดลำดับไม่ได้

**ทุกเกณฑ์ขนาดวัดเป็น ATR** ไม่ใช่ดอลลาร์หรือเปอร์เซ็นต์: การกวาดต้องเกิน
`min_sweep_atr` × ATR, การเบรกต้องเกิน `min_bos_atr` × ATR, stop วางห่างจาก HEAD
เท่ากับ `sl_buffer_atr` × ATR — นี่คือเหตุผลที่ config ชุดเดียวใช้ได้ทั้งกับ BTC
ราคา 60,000 ดอลลาร์ และเหรียญราคา 0.00004 ดอลลาร์ โดยไม่ต้องจูนรายเหรียญ

## 3. ทำไมสัญญาณถึงมาช้าไปไม่กี่แท่ง — และทำไมมันไม่มีวันหายไป

pivot จะยืนยันได้ก็ต่อเมื่อมีแท่งปิดครบ `pivot_right` แท่งหลังจากนั้น บอทเลือกที่จะ
**รอ**ให้ยืนยันจริงแทนที่จะเดา และยัง**ทิ้งแท่งที่ยังไม่ปิด**ออกก่อนคำนวณทุกครั้ง

**สิ่งที่เสียไป:** โปรไฟล์ `short` จะยืนยัน HEAD ช้ากว่าจุดจริง 3 แท่ง
ส่วน `wide` ช้า 15 แท่ง

**สิ่งที่ได้กลับมา:** **ไม่มีการ repaint** สัญญาณที่คุณได้รับคือสัญญาณที่เป็นจริง
ณ ตอนส่ง และพรุ่งนี้เปิดกราฟย้อนดูมันก็ยังอยู่ตรงนั้น เครื่องมือที่ขึ้นรูปแบบให้ดู
ทันทีที่เกิดคือการแสดงรูปทรงที่ยัง**ถูกลบทิ้งทีหลังได้** — สวยกว่าบนจอ แต่ backtest
อย่างซื่อสัตย์ไม่ได้

ความช้านี้มักไม่ทำให้พลาดจุดเข้า เพราะจุดเข้าอยู่ที่ระดับ QM และตอนสัญญาณเกิด
ราคากำลัง**เดินทางกลับมาหา**ระดับนั้นพอดี

## 4. ด่านกรอง 4 ชั้น

### ด่าน 1 — อัตราส่วนเสี่ยงต่อผลตอบแทน (`min_rr: 1.5`)

ทำงานอยู่ในตัวตรวจจับเลย ถ้าระยะจากระดับ QM ไป TP1 น้อยกว่า 1.5 เท่าของระยะไป
stop จะถูกตัดทิ้งทันทีไม่ว่ารูปจะสวยแค่ไหน **นี่คือตัวกรองที่ทรงพลังที่สุดในบอท**
และเป็นเหตุผลที่ win rate ราว 50% ยังทำกำไรได้ ไม่ใช่ปัญหา

### ด่าน 2 — โมเมนตัมของ swing สุดท้าย (`divergence.bos_rs_max`)

**ไม่ใช่** divergence แบบคลาสสิกที่วัด LS↔HEAD แต่วัดบน **ขา BOS→RS** คือ
แรงดันสุดท้ายที่วิ่งกลับขึ้นมาหาจุดเข้าของคุณ ถ้า RSI พุ่งแรงบนขานี้ แปลว่าการกลับมา
เทสมีแรงซื้อจริงหนุนอยู่ และมีโอกาสสูงที่จะทะลุระดับของคุณไปเลย ค่า `bos_rs_max`
จำกัดว่า RSI ขยับได้มากสุดเท่าไหร่บนขานั้น: **10** จุดสำหรับ `short`, **20** สำหรับ `wide`

สองค่านี้ไม่ได้ตั้งเล่นๆ — ขาของโปรไฟล์ `wide` กินเวลาหลายวัน RSI จึงขยับไกลกว่า
โดยธรรมชาติ การใช้ค่าเดียวร่วมกันเคยทำให้โปรไฟล์ `wide` เหลืออัตราผ่านแค่ 2%
แบบเงียบๆ จนกระทั่งแยกค่าตามโปรไฟล์

ค่าที่วัดได้ชุดเดียวกันนี้ยังใช้ให้ **เกรด A / B / C** ในข้อความด้วย: **A** เมื่อโมเมนตัม
อ่อนแรงลง ≥5 จุด RSI ในทิศที่คุณจะเทรด, **B** เมื่ออ่อนแรงลงบ้าง, **C** นอกนั้น

### ด่าน 3 — เนื้อเทียน vs ไส้เทียน ตรงจุดเบรก

BOS ต้องเป็น **เนื้อเทียนปิดทะลุ** L1 ไม่ใช่ไส้ที่แทงเลยลงไปแล้วปิดกลับเข้ามา
งานวิจัย price action ระบุว่าโอกาสไปต่อหลังเนื้อปิดทะลุอยู่ที่ 59–64% ส่วนไส้ทะลุ
แล้วปิดกลับเหลือ 25–27% ซึ่ง**ต่ำกว่าค่าฐาน** แปลว่ารูปแบบนั้นเป็นสัญญาณ*กลับตัว*
ไม่ใช่สัญญาณเบรก "BOS" ที่มีแต่ไส้จึงเป็นการกวาด liquidity ของอีกฝั่ง
ไม่ใช่การทำลายโครงสร้าง — เงื่อนไขของ QM ไม่เคยเกิดขึ้นจริง

วัดจริงบน 98 เหรียญ (out-of-sample):

| | ไม้ | win | ค่าคาดหวัง | PF |
|---|---|---|---|---|
| ไม่กรองแท่งเทียน | 1578 | 45.8% | +0.634R | 2.02 |
| **BOS เนื้อปิดทะลุ (ค่าเริ่มต้น)** | **462** | **50.6%** | **+0.966R** | **2.74** |
| ทิศตรงข้าม: รับเฉพาะไส้ทะลุ | 654 | 44.6% | +0.510R | 1.81 |

แถวสุดท้ายคือการตรวจสอบที่สำคัญที่สุด — ตัวกรองที่ช่วยให้ดีขึ้น *และ* ตัวกลับด้าน
ก็ช่วยให้ดีขึ้นด้วย แปลว่ากำลังวัด noise ไม่ใช่ผลจริง

**ตัวกรองนี้ตัดสัญญาณทิ้งราว 71%** ถ้าอยากเห็นเยอะกว่านี้แล้วตัดสินใจเอง
ตั้ง `candle_quality.enabled: false` ได้ — ค่านี้ถูกติดไว้กับทุกสัญญาณอยู่แล้ว
ไม่ว่าจะเปิดหรือปิดตัวกรอง ข้อความ LINE จึงยังบอกเสมอว่าการเบรกเป็นแบบไหน

### ด่าน 4 — ความสด (`fresh_bars: 1`)

ส่งเฉพาะรูปแบบที่เกิดขึ้นบนแท่งที่เพิ่งปิดล่าสุดเท่านั้น ที่เก่ากว่านั้นคืออดีตไปแล้ว
เพราะราคาเดินออกจากจุดเข้าไปเรียบร้อย

## 5. ตัวเลขในข้อความมาจากไหน

| ช่อง | คำนวณจาก |
|---|---|
| **Entry** | ระดับ QM = ราคาของ Left Shoulder เป็นออเดอร์แบบ **limit** ไม่ใช่ market |
| **Stop Loss** | เลย HEAD ออกไป บวก `sl_buffer_atr` (0.25) × ATR ของแท่งที่ทริกเกอร์ |
| **TP1** | จุดสุดของ BOS — ราคาที่ไปถึงตอนทำลายโครงสร้าง |
| **TP2** | ต่อจาก TP1 อีก `tp2_extension` (0.618) × ระยะ HEAD ถึง BOS |
| **R:R** | (Entry→TP1) ÷ (Entry→Stop) — ด่าน 1 ตัดทุกอย่างที่ต่ำกว่า 1.5 |
| **Size** | `risk.equity` × `risk.risk_pct` ÷ (Entry − Stop) ค่าเริ่มต้น 10,000 × 1% = เสี่ยง 100 ต่อไม้ |

**ต้องแก้ `risk.equity` ให้ตรงกับพอร์ตของคุณเอง** ไม่งั้นช่อง Size ไม่มีความหมาย
สำหรับคุณ ส่วน backtest ทั้งหมดออกที่ **TP1** — TP2 มีไว้สำหรับคนที่แบ่งไม้ออก
แล้วถือส่วนที่เหลือต่อ ยังไม่ได้ผ่านการยืนยันในฐานะจุดออกทั้งไม้

## 6. 1H สแกน 2 โปรไฟล์ ส่วน 4H โปรไฟล์เดียว

1H จะถูกสแกน 2 รอบต่อ 1 pass ด้วยขนาด swing ต่างกัน:

| โปรไฟล์ | pivot | ระยะเวลารอ retest | หาอะไรเจอ |
|---|---|---|---|
| `short` | 3 | 50 แท่ง (~2 วัน) | รูปแบบระดับวัน |
| `wide` | 15 | 168 แท่ง (1 สัปดาห์) | รูปแบบระดับสัปดาห์ |

ขนาด swing ที่ดีที่สุด**ไม่คงที่** — ช่วง 2020–2024 swing เล็กชนะ แต่ช่วง 2024–2026
swing ใหญ่ชนะ การรันทั้งสองแบบจึงนิ่งกว่าการเดิมพันกับแบบใดแบบหนึ่ง และชื่อโปรไฟล์
จะแสดงในข้อความเสมอ คุณจึงรู้ว่าตัวไหนเป็นคนยิงสัญญาณ

## 7. กันการส่งซ้ำ

ทุกสัญญาณมี id ที่สร้างจากชื่อเหรียญ + timeframe + โปรไฟล์ + **เวลาของแท่ง HEAD**
ไม่ใช่ index ของแท่ง เพราะ index จะเลื่อนทุกครั้งที่มีแท่งใหม่เข้ามา ถ้าใช้ index
รูปแบบเดิมจะถูกส่งซ้ำทุกชั่วโมง id เหล่านี้เก็บใน SQLite (`signals.db`)
รีสตาร์ทบอทจึงไม่ส่งของเก่าซ้ำอีกรอบ

## สิ่งที่บอท "ตั้งใจ" จะไม่ทำ

- **ไม่เทรดอัตโนมัติ** — ในโค้ดไม่มี API key ของ exchange อยู่เลยแม้แต่ที่เดียว
  มันอ่านข้อมูลตลาดสาธารณะ และส่งคำสั่งซื้อขายไม่ได้
- **ไม่เปิดตัวกรองเทรนด์ TF ใหญ่เป็นค่าเริ่มต้น** — มีให้ (`htf_filter.py`) แต่วัดแล้ว
  ผลเป็นกลางๆ คือเสียสัญญาณไปโดยไม่ได้อะไรกลับมา เปิดเองได้ถ้าอยากบังคับให้ตรง 4H
- **ไม่ดูข่าว sentiment หรือ funding rate** — ใช้ราคากับวอลุ่มเท่านั้น
- **ไม่บังคับ divergence แบบ LS↔HEAD** — ตำรา QM ดั้งเดิมต้องการข้อนี้ แต่วัดบน
  ชุดข้อมูลนี้แล้วไม่คุ้มกับสัญญาณที่เสียไป จึงตั้งเป็น `required: false`
  คือรายงานให้ดู แต่ไม่ใช้ตัดทิ้ง

---

## สิ่งที่ทดสอบแล้วจริง

Backtest บนแท่งเทียน 1H จำนวน **2.6 ล้านแท่ง** — 99 เหรียญ ย้อนหลังสูงสุด 6.6 ปี
จากคลังข้อมูลทางการของ Binance พร้อมแบ่ง in-sample / out-of-sample:

| โปรไฟล์ | out-of-sample ไม่กรองแท่งเทียน | เปิดตัวกรองแท่งเทียน (ค่าเริ่มต้น) |
|---|---|---|
| `1h short` (swing เล็ก 0.5–3 วัน) | n=1428, win 46.7%, +0.634R | win 53.0%, +0.979R |
| `1h wide` (swing ใหญ่ 3–10 วัน) | n=150, win 36.7%, +0.631R | win 38.4%, +0.897R |
| **รวมสองโปรไฟล์** | n=1578, win 45.8%, +0.634R, PF 2.02 | **n=462, win 50.6%, +0.966R, PF 2.74** |

ทุกตัวกรองถูกตรวจ**แยกรายโปรไฟล์** ไม่ได้ดูแค่ตัวเลขรวม เพราะตัวกรองหนึ่งอาจทำให้
ภาพรวมดีขึ้นแต่ฆ่าโปรไฟล์ใดโปรไฟล์หนึ่งแบบเงียบๆ ได้ — เคยเกิดขึ้นมาแล้วกับบอทตัวนี้
และนั่นคือที่มาของการแยกค่า `bos_rs_max` ตามโปรไฟล์ในด่าน 2

**วิธีจำลองการเทรด:** เข้าไม้แบบ limit ที่ระดับ QM, ออกที่ TP1 หรือ stop,
**สมมติว่าโดน stop ก่อนเสมอ**เมื่อแท่งเดียวครอบทั้ง stop และเป้าหมาย,
คิดค่าธรรมเนียม 0.05% ต่อข้าง บวก slippage 0.02% ในหน่วย R, ถือได้สูงสุด 200 แท่ง,
และไม่มีการอ่านแท่งที่ตัวตรวจจับยังไม่เห็นตอนนั้น (ไม่มี look-ahead)

**อ่านตัวเลขนี้ด้วยความระมัดระวัง** — การจำลองยังทำแทน funding rate,
การจับคู่คำสั่งจริงในตลาด หรือวิธีเทรดของคุณเองไม่ได้ อีกทั้งรายชื่อเหรียญคือเหรียญ
วอลุ่มสูง**ในวันนี้** เหรียญที่ตายไปแล้วจึงไม่อยู่ในชุดทดสอบ (survivorship bias)
**ผลในอดีตไม่ได้รับประกันอนาคต**

ทดสอบซ้ำเองได้:

```bash
python fetch_binance_vision.py BTCUSDT ETHUSDT SOLUSDT
python backtest_full.py --data-dir data/vision --split 0.3
```

## บอทตัวนี้เหมาะกับคุณไหม

**น่าจะเหมาะ ถ้า** คุณเทรด swing คริปโตด้วยตัวเอง อยากได้รายการจุดที่น่าสนใจ
เชิงโครงสร้างมาให้กลั่นกรองต่อ ไม่ใช่กล่องดำ และรับได้กับการได้สัญญาณราว
50 ครั้งต่อเดือนโดยที่ประมาณครึ่งหนึ่งจะขาดทุน

**น่าจะไม่เหมาะ ถ้า** คุณอยากได้ระบบเทรดอัตโนมัติ อยากได้ win rate สูงๆ
อยากได้สัญญาณทันทีไม่ต้องรอแท่งปิด หรืออยากเทรดอย่างอื่นนอกจากคริปโต perpetual

## สิ่งที่ต้องมี

- Python 3.11 ขึ้นไป
- **LINE Official Account** ที่เปิด Messaging API (แผนฟรี 300 ข้อความ/เดือน)
- **Cloudflare R2** หรือ S3-compatible storage อื่นที่เปิดสาธารณะได้ สำหรับเก็บรูปกราฟ
- ถ้าอยากให้รัน 24 ชม. ต้องมี VM เล็กๆ ที่เปิดตลอด

**ไม่ต้องใช้ API key ของ exchange** เพราะบอทอ่านข้อมูลตลาดสาธารณะอย่างเดียว
ไม่แตะบัญชีเทรดของคุณเลย

## ติดตั้ง

### 1. ติดตั้งโปรแกรม

```bash
git clone https://github.com/FlukEDev/qm-bot.git
cd qm-bot
python3 -m venv .venv && source .venv/bin/activate
pip install -r requirements.txt
cp .env.example .env
```

### 2. ตั้งค่า LINE Official Account

1. สร้าง OA ที่ [LINE Official Account Manager](https://manager.line.biz/)
2. ที่ [LINE Developers Console](https://developers.line.biz/console/):
   สร้าง Provider → สร้าง **Messaging API channel** ผูกกับ OA นั้น
3. ออก **channel access token** แบบ long-lived → ใส่ใน `.env` ที่
   `LINE_CHANNEL_ACCESS_TOKEN`
4. ที่ OA Manager → Settings → Response settings ให้**ปิด** auto-reply
   และ greeting message
5. แอด OA เป็นเพื่อนในมือถือ

### 3. หา userId ของตัวเอง

บอทส่งข้อความหาคุณโดยตรง แต่ LINE ไม่มี API ให้ค้นหา userId — ต้องได้จาก
webhook เท่านั้น

```bash
python webhook_capture.py                       # รันที่พอร์ต 8000
cloudflared tunnel --url http://localhost:8000   # หรือ ngrok http 8000
```

เอา URL ของ tunnel ต่อท้ายด้วย `/line-webhook` ไปใส่เป็น Webhook URL ในคอนโซล
กด **Verify** เปิด **Use webhook** แล้วทักแชทหา OA — userId ของคุณ (ขึ้นต้นด้วย `U`)
จะขึ้นในเทอร์มินัล เอาไปใส่ `.env` ที่ `LINE_TO_USER_ID` แล้วปิดสคริปต์กับ tunnel ได้เลย
ไม่ต้องใช้อีก เพราะบอทมีหน้าที่ส่งออกอย่างเดียว

### 4. ที่เก็บรูปกราฟ

LINE เป็นฝ่ายไปดึงรูปเองผ่าน HTTPS อัปโหลดตรงเข้า API ไม่ได้ รูปจึงต้องมี URL สาธารณะ

1. Cloudflare → R2 → สร้าง bucket แล้วเปิด public access
2. สร้าง API token ที่จำกัดสิทธิ์เฉพาะ bucket นั้น (Object Read & Write)
3. กรอก `R2_ACCOUNT_ID`, `R2_ACCESS_KEY_ID`, `R2_SECRET_ACCESS_KEY`,
   `R2_BUCKET`, `R2_PUBLIC_BASE_URL` ใน `.env`

ใช้ S3-compatible เจ้าอื่นก็ได้ — ดู `chart_uploader.py` มีแค่ ~40 บรรทัด

### 5. ทดสอบก่อนส่งจริง

```bash
python bot.py --config config.yaml --dry-run
```

จะดึงรายชื่อเหรียญ สแกนทุกตัว แล้วพิมพ์สิ่งที่จะส่งออกมาให้ดู — **ไม่ส่ง LINE
ไม่อัปโหลดรูป ไม่บันทึกสถานะ** ควรรันอันนี้ก่อนเสมอ

จากนั้นลองส่งจริง 1 ครั้ง:

```bash
python bot.py --config config.yaml
```

## การใช้งาน

```bash
python qmbotctl.py start          # รันเบื้องหลังทุกชั่วโมง พร้อมแสดง log สด
python qmbotctl.py start --no-attach
python qmbotctl.py status
python qmbotctl.py logs -f
python qmbotctl.py stop
```

กด Ctrl+C แค่ออกจากหน้าจอ log — **บอทยังทำงานต่อ** ถ้าใช้ macOS ใส่
`--keep-awake` เพื่อกันเครื่องหลับระหว่างรอสแกน (แต่กันการปิดฝาโน้ตบุ๊กไม่ได้)

Log เก็บที่ `logs/YYYY-MM-DD.log` แยกไฟล์ตามวัน

**ถ้าอยากให้รันตลอด 24 ชม.**: ในโฟลเดอร์ `deploy/` มี systemd unit และสคริปต์
ติดตั้งสำหรับ Linux VM ให้แล้ว — **ข้อควรระวัง: Binance บล็อค IP จากสหรัฐฯ
(ตอบ HTTP 451)** ดังนั้นอย่าเลือก region ในอเมริกา

## การปรับแต่ง

ทุกอย่างอยู่ใน `config.yaml` และแต่ละค่ามีผล backtest กำกับไว้ในคอมเมนต์
ค่าที่ควรรู้จัก:

| ค่า | ควบคุมอะไร |
|---|---|
| `universe.top_n` | สแกนกี่เหรียญ |
| `qm.1h[].pivot_left/right` | ขนาด swing — 3 = รูปแบบเล็ก, 15 = รูปแบบระดับสัปดาห์ |
| `qm.1h[].max_bars_to_retest` | ยอมรอ retest ได้นานกี่แท่ง |
| `qm.1h[].min_rr` | **ตัวกรองที่ทรงพลังที่สุด** ถ้าสัญญาณเยอะเกินให้ปรับขึ้นก่อน |
| `candle_quality.enabled` | ตั้ง `false` จะได้สัญญาณกลับมาราว 3.4 เท่า แลกกับค่าคาดหวังที่ต่ำลง |
| `candle_quality.require_head_wick` | บังคับให้ HEAD เป็นไส้กวาดด้วย — ใช้เดี่ยวๆ ดี แต่รวมกับกฎ BOS แล้วแย่ลง |
| `divergence.bos_rs_max` | การเด้งกลับต้องอ่อนแรงแค่ไหน (แยกตามโปรไฟล์) |
| `divergence.last_swing.min_diff` | ตั้ง `5` เพื่อรับเฉพาะเกรด A |
| `risk.equity` / `risk_pct` | พอร์ตที่ใช้คำนวณช่อง Size |
| `daily_report.quota_throttle` | ลดสรุปรายวันเหลือสัปดาห์ละครั้งเมื่อโควตา LINE เกิน 50% |

### จำนวนสัญญาณกับโควตา LINE

ค่าเริ่มต้นที่ 100 เหรียญจะได้ราว **50 สัญญาณ/เดือน** บวกสรุปรายวัน 30 =
ประมาณ 80 จากโควตาฟรี 300 ถ้าปิดตัวกรองแท่งเทียนจะขึ้นไปราว 170/เดือน
(รวมเป็น ~200) ซึ่งยังพอไหวแต่เหลือที่ว่างไม่มาก ถ้าอยากลดลงอีก:
เพิ่ม `min_rr`, ลด `universe.top_n`, หรือตั้ง `last_swing.min_diff: 5`
เพื่อรับเฉพาะเกรด A

## โครงสร้างไฟล์

```
bot.py                 วนสแกนทุกชั่วโมง
qm_detector.py         ตรวจจับโครงสร้าง QM (ฟังก์ชันบริสุทธิ์ ไม่มี I/O)
divergence.py          ยืนยันด้วย RSI + ให้เกรด A/B/C
candle_quality.py      ตรวจเนื้อเทียน/ไส้เทียนที่จุด HEAD และ BOS
htf_filter.py          ตัวกรองแนวโน้ม TF ใหญ่ (ปิดไว้โดย default)
universe.py            เลือกเหรียญที่จะสแกน
chart_renderer.py      วาดกราฟ PNG
chart_uploader.py      อัปโหลดขึ้น S3/R2
line_notifier.py       ส่งผ่าน LINE Messaging API
daily_report.py        สรุป Bitcoin รายวัน
qmbotctl.py            start/stop/status/logs
backtest_full.py       backtest ทั้ง pipeline
fetch_binance_vision.py  ดึงข้อมูลย้อนหลังลึกจาก data.binance.vision
make_version.py        เก็บ snapshot เวอร์ชัน -> versions/
deploy/                systemd unit + สคริปต์ติดตั้งบน VM
```

โฟลเดอร์ `versions/` เก็บ snapshot และบันทึกการเปลี่ยนแปลงของทุกครั้งที่แก้บอท
**รวมถึงการเปลี่ยนแปลงที่ภายหลังพบว่าผิดและถูกยกเลิก พร้อมเหตุผล**

## ข้อจำกัดที่ต้องรู้

- **ไม่ใช่บอทเทรดอัตโนมัติ** — ส่งข้อความอย่างเดียว ไม่มีการส่งคำสั่งซื้อขาย
- **ไม่ใช่คำแนะนำการลงทุน** — ทุกข้อความมี disclaimer กำกับ และบรรทัดนี้ก็เช่นกัน
- **คริปโตเท่านั้น** — ถ้าจะทำทอง/ค่าเงินต้องใช้แหล่งข้อมูลอื่นและจัดการ gap
  วันหยุดสุดสัปดาห์เพิ่ม
- **รูปแบบกลับตัวพลาดบ่อยเป็นเรื่องปกติ** — win rate ~50% เมื่อเปิดตัวกรองแท่งเทียน
  (~45% เมื่อปิด) คือสิ่งที่ออกแบบไว้ ไม่ใช่ข้อผิดพลาด ตัวกรอง RR คือสิ่งที่ทำให้มันกำไรได้
- **สัญญาณมารายชั่วโมง ไม่ใช่เรียลไทม์** — ระหว่างที่แท่งยังไม่ปิดจะไม่มีอะไรส่งออกมา
- **edge อาจไม่คงอยู่ตลอดไป** — วัดจากข้อมูลในอดีต ตลาดเปลี่ยนได้เสมอ
- **คุณเสี่ยงด้วยเงินของคุณเอง** — เริ่มจากเทรดกระดาษก่อน ลงไม้เล็กๆ และใช้สัญญาณ
  เป็นแค่ข้อมูลประกอบหนึ่งอย่าง ไม่ใช่คำตอบสุดท้าย

## สัญญาอนุญาต

MIT — ดู [LICENSE](LICENSE) เอาไปใช้ ดัดแปลง ต่อยอดได้เลย **ไม่มีการรับประกันใดๆ
ทั้งสิ้น** ถ้าขาดทุนถือเป็นความรับผิดชอบของผู้ใช้เอง
